--- a/currency_rate_update/views/res_currency_rate.xml
+++ b/currency_rate_update/views/res_currency_rate.xml
@@ -10,10 +10,7 @@
         <field name="inherit_id" ref="base.view_currency_rate_form" />
         <field name="arch" type="xml">
             <form position="inside">
-                <div class="oe_chatter">
-                    <field name="message_follower_ids" widget="mail_followers" />
-                    <field name="message_ids" widget="mail_thread" />
-                </div>
+                <chatter />
             </form>
             <field name="rate" position="after">
                 <field name="provider_id" readonly="1" />
