--- a/currency_rate_update/views/res_currency_rate_provider.xml
+++ b/currency_rate_update/views/res_currency_rate_provider.xml
@@ -20,18 +20,18 @@
         </field>
     </record>
     <record model="ir.ui.view" id="res_currency_rate_provider_tree_view">
-        <field name="name">res.currency.rate.provider.tree</field>
+        <field name="name">res.currency.rate.provider.list</field>
         <field name="model">res.currency.rate.provider</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="service" />
                 <field name="company_id" groups="base.group_multi_company" />
                 <field name="update_schedule" />
                 <field name="available_currency_ids" column_invisible="True" />
                 <field name="currency_ids" widget="many2many_tags" />
                 <field name="daily" column_invisible="True" />
-                <field name="next_run" invisible="daily" />
-            </tree>
+                <field name="next_run" invisible="True" />
+            </list>
         </field>
     </record>
     <record model="ir.ui.view" id="res_currency_rate_provider_form_view">
@@ -94,10 +94,7 @@
                         </group>
                     </group>
                 </sheet>
-                <div class="oe_chatter">
-                    <field name="message_follower_ids" widget="mail_followers" />
-                    <field name="message_ids" widget="mail_thread" />
-                </div>
+                <chatter />
             </form>
         </field>
     </record>
@@ -132,7 +129,7 @@
     <record model="ir.actions.act_window" id="action_res_currency_rate_provider">
         <field name="name">Currency Rates Providers</field>
         <field name="res_model">res.currency.rate.provider</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
     <menuitem
         id="menu_res_currency_rate_provider"
